--- a/arch/arm64/hotplug/Kconfig
+++ b/arch/arm64/hotplug/Kconfig
@@ -30,3 +30,18 @@ config ZEN_DECISION
 	  by disabling these services.
 
 	  If unsure, say N.
+
+config MSM_HOTPLUG
+	bool "MSM hotplug driver"
+	depends on HOTPLUG_CPU
+	default y
+	help
+	  The MSM hotplug driver controls on-/offlining of additional cores based on current cpu load.
+
+config BRICKED_HOTPLUG
+ 	bool "Enable kernel based mpdecision"
+ 	depends on MSM_RUN_QUEUE_STATS
+ 	default y
+ 	help
+ 	  This enables kernel based multi core control. 
+
