--- a/arch/arm64/hotplug/Makefile
+++ b/arch/arm64/hotplug/Makefile
@@ -1,1 +1,3 @@
 obj-$(CONFIG_ZEN_DECISION) 	+= msm_zen_decision.o
+obj-$(CONFIG_MSM_HOTPLUG) += msm_hotplug.o
+obj-$(CONFIG_BRICKED_HOTPLUG) += bricked_hotplug.o
